[package]
name = "dns-sd"
build = "build.rs"
version = "0.1.3"
description = "Rust binding for dns-sd"
homepage = "https://github.com/plietar/rust-dns-sd"
repository = "https://github.com/plietar/rust-dns-sd"
authors = ["Paul Lietar <paul@lietar.net>"]
license = "MIT"
edition = "2024"

[build-dependencies]
pkg-config = "~0.3.6"

[dependencies]
libc = "0.2"
objc2-core-foundation = { version = "0.3.2", features = ["CFRunLoop"] }
